--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,14 +23,15 @@
                 <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
                 <meta property="schema:keywords" content="about;od4d"/>
             </header>
-            <section>
+            <section id="Video">
                 <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
                     <meta property="schema:name" content="Open Government Data and OD4D "/>
-                    <iframe  property="schema:embedUrl" width="864" height="510" src="//www.youtube.com/embed/ndiVbSQe5Aw" left: 0px; top: 0px; -webkit-transform: none; frameborder="0" allowfullscreen>
+                    <iframe property="schema:embedUrl" width="864" height="510" src="//www.youtube.com/embed/ndiVbSQe5Aw" left: 0px; top: 0px; -webkit-transform: none; frameborder="0" allowfullscreen>
                     </iframe>
                 </p>
             </section>
             <section property="schema:description">
+                <section id="Introduction">
                 <h2>Introduction</h2>
                 <p>
                 Sharing governmental information in open, accessible and structured formats could substantially increase transparency and accountability in public policy design and implementation. Furthermore, it enables a broader engagement of civil society in these processes, fosters improvements in public administration’s efficiency and favors the generation of new services for citizens. Hence, opening data and the role that society’ can play in opening processes are key to promote a more effective public administration and prompt the development of a more equal knowledge economy.</p> 
@@ -39,12 +40,16 @@
                 <p>
                 This project is identified by the brand <b>OD4D – Open Data for Development</b>. This initiative seeks to expand and produce further knowledge on open data and its potential to improve the quality of public policies in Latin America and the Caribbean. Furthermore, it aims at offering an interactive platform for dialogue and exchange among the different actors (governments, citizens, developers, academics, etc.) involved in the debate on open government data, at regional as well as  global level.
                 </p>
-            </section>
-            <section property="schema:articleBody">
+                </section>
+            </section>    
+            <section property="schema:articleBody" class="articleContainer">
+                <section id="Objectives" class="leftColumn">
                 <h2>OD4D Objectives</h2>
                 <p>
                 The general objective of this research project is to contribute to the development of Open Data strategies leading to accountability, innovative services and effective public policies in strategic segments, thus promoting a more inclusive economy of knowledge in Latin America and the Caribbean. In order to achieve this, the project investigates the potential of Open Data in public policies on 3 fronts: <b>transparency, new services, and equitable development.</b>
                 </p>
+                </section>
+                <section id="Specific-Tasks" class="rightColumn">
                 <h2>OD4D 6 specific tasks</h2>
                 <ul>
                     <li>To <b>map out</b> the main initiatives in Latin America and the Caribbean for structured economic, social and environmental data sharing and to design a methodological framework to examine the relationship between opening data and the quality of public policies.</li>
@@ -62,6 +67,8 @@
                     To <b>assess the potential</b> of Open Data strategies in the design and implementation of public policies aimed at promoting economic development and social inclusion in Latin American countries and in the Caribbean.
                     </li>
                 </ul>
+                </section>
+                <section id="Intended-Results">
                 <h2>Intended results:</h2>
                 <ul>
                     <li>
@@ -75,7 +82,7 @@
                     </li>
                 </ul>
                 <p>Check out the whole OD4D proposal (in English): <a href="http://www.od4d.org/wp-content/uploads/2012/10/Open-Data-Projet-Proposal-29-de-marzo-31.pdf"><b>Open-Data-Projet-Proposal</b></a> - PDF (616KB)</p>
-
+                </section>
             </section>
             <section>
               <p>Author:
@@ -87,17 +94,18 @@
           </p>
             </section>
         </article>
-    <footer>
-        <section class="center-box" style="vertical-align: middle; overflow:auto;">
+    <footer class="inner-shadow">
+        <section>
+            <section class="center-box out-shadow">
+                <p style="float: left;">
                 <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> &nbsp; | &nbsp;
                 <a href="http://www.od4d.org/contact-us/">Contact us</a>
-            <!--<div style="float: right; display: inline-block; margin: 5px;">
-                <img alt="CEPAL Logo" src="http://www.od4d.org/wp-content/themes/opendata/images/logo-cepal.png"/>
-                <img alt="IDRC CRDI Canada Logo" src="http://www.od4d.org/wp-content/themes/opendata/images/logo-idrc.png"/>
-                <img alt="W3C Logo" src="http://www.od4d.org/wp-content/themes/opendata/images/logo-w3c.png"/>
-            </div>-->
+                </p>
+                <p style="float: right; color:#b5b5b5; font-size: 16px;">
+                 © 2014 Open Data for Development - All Rights Reserved.   
+                </p>
+            </section>
         </section>
     </footer>
-    </div>
     </body>
     </html>
