Changing css to make youtube video responsive

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
     <!DOCTYPE HTML>
-    <html xmlns:schema="http://schema.org/">
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:schema="http://schema.org/">
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
       <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
@@ -26,8 +26,9 @@
             <section id="Video">
                 <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
                     <meta property="schema:name" content="Open Government Data and OD4D "/>
-                    <iframe property="schema:embedUrl" width="864" height="510" src="//www.youtube.com/embed/ndiVbSQe5Aw" left: 0px; top: 0px; -webkit-transform: none; frameborder="0" allowfullscreen>
-                    </iframe>
+                    <div class="video-container">
+                        <iframe property="schema:embedUrl" width="864" height="510" src="//www.youtube.com/embed/ndiVbSQe5Aw" left: 0px; top: 0px; -webkit-transform: none; frameborder="0" allowfullscreen> </iframe>
+                    </div>
                 </p>
             </section>
             <section property="schema:description">
