--- a/app/assets/stylesheets/od4d_stylesheet.css
+++ b/app/assets/stylesheets/od4d_stylesheet.css
@@ -207,7 +207,6 @@ footer {
 }
 
 /*
-
 ul.header-menu li {
     display: inline-block;
 	color: #ffffff;
@@ -217,7 +216,6 @@ ul.header-menu li {
 	width: auto;
 	text-align: left;
 }
-
 */
 #Introduction {
   float: left;
@@ -240,7 +238,15 @@ ul.header-menu li {
    #Specific-Tasks {float:left; width: 100%; margin: 0px 0px 20px 0px;}  
 }
 
-video {
-  width: 100%    !important;
-  height: auto
+.video-container {
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
 }
+.video-container iframe {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
