Fixing close of span tag in about page.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -35,14 +35,14 @@
                 <section id="Introduction">
                 <h2>Introduction</h2>
                 <p>
-                Sharing governmental information in open, accessible and structured formats could substantially increase transparency and accountability in public policy design and implementation. Furthermore, it enables a broader engagement of civil society in these processes, fosters improvements in public administration’s efficiency and favors the generation of new services for citizens. Hence, opening data and the role that society’ can play in opening processes are key to promote a more effective public administration and prompt the development of a more equal knowledge economy.</p> 
+                Sharing governmental information in open, accessible and structured formats could substantially increase transparency and accountability in public policy design and implementation. Furthermore, it enables a broader engagement of civil society in these processes, fosters improvements in public administration’s efficiency and favors the generation of new services for citizens. Hence, opening data and the role that society’ can play in opening processes are key to promote a more effective public administration and prompt the development of a more equal knowledge economy.</p>
                 <p> Based on this premise, the <a href="http://www.w3c.org"><b>W3C Brazil</b></a> and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><b>ECLAC</b></a>) led a project on emerging <b>impacts and potentialities of open data for public policy in Latin America and the Caribbean</b>, funded by the International Development and Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><b>IDRC</b></a>).
                 </p>
                 <p>
                 This project is identified by the brand <b>OD4D – Open Data for Development</b>. This initiative seeks to expand and produce further knowledge on open data and its potential to improve the quality of public policies in Latin America and the Caribbean. Furthermore, it aims at offering an interactive platform for dialogue and exchange among the different actors (governments, citizens, developers, academics, etc.) involved in the debate on open government data, at regional as well as  global level.
                 </p>
                 </section>
-            </section>    
+            </section>
             <section property="schema:articleBody" class="articleContainer">
                 <section id="Objectives" class="leftColumn">
                 <h2>OD4D Objectives</h2>
@@ -90,7 +90,7 @@
               <span resource="#w3c-organization" property="schema:author" typeof="schema:Organization">
                 <span property="schema:name">
                     W3C
-                </section>
+                </span>
               </span>
           </p>
             </section>
@@ -103,7 +103,7 @@
                 <a href="http://www.od4d.org/contact-us/">Contact us</a>
                 </p>
                 <p style="float: right; color:#b5b5b5; font-size: 16px;">
-                 © 2014 Open Data for Development - All Rights Reserved.   
+                 © 2014 Open Data for Development - All Rights Reserved.
                 </p>
             </section>
         </section>
