Removing properties from iframe, transfering to css

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,7 +27,7 @@
                 <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
                     <meta property="schema:name" content="Open Government Data and OD4D "/>
                     <div class="video-container">
-                        <iframe property="schema:embedUrl" width="864" height="510" src="//www.youtube.com/embed/ndiVbSQe5Aw" left: 0px; top: 0px; -webkit-transform: none; frameborder="0" allowfullscreen> </iframe>
+                        <iframe property="schema:embedUrl" src="//www.youtube.com/embed/ndiVbSQe5Aw"> </iframe>
                     </div>
                 </p>
             </section>
