--- a/app/assets/stylesheets/od4d_stylesheet.css
+++ b/app/assets/stylesheets/od4d_stylesheet.css
@@ -80,7 +80,7 @@ body {
 	font-weight: 300;
 	color: #2b2b2b;
 	line-height: 1.3em;
-	background-color: #eeeeee;
+	background-color: #ffffff;
 	margin: 0px;
 }
 
@@ -111,7 +111,7 @@ p {
 	color: #2b2b2b;
 	margin: 15px 0px 0px 0px;
 	line-height: 1.3em;
-	text-align: justify;
+	text-align: ;
 }
 
 b {
@@ -160,14 +160,13 @@ nav.header-menu {
 	font-family: 'Cuprum', sans-serif;
 	color: #ffffff;
 	background-color: #d9d9d9;
-    padding: 5px;
+    padding: 15px;
 }
 
 ul {
        list-style-type: square;
        margin: 15px 0px 0px 25px;
        line-height: 1.3em;
-       text-align: justify;
 }
 
 footer {
@@ -213,14 +212,14 @@ ul.header-menu li {
 }
 
 #Objectives {
-  width: 25%;
+  width: 24%;
   float: left;
 }
 
 #Specific-Tasks {
   width: 72%;
   float: left;
-  margin-left: 2%;
+  margin-left: 3%;
   margin-bottom: 50px;
 }
 
@@ -234,7 +233,6 @@ ul.header-menu li {
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
-
 }
 
 .video-container iframe {
@@ -260,6 +258,7 @@ p.author
 	text-align: justify;
 
 }
+
 p.category
 {
 	font-size: .875em;
@@ -268,8 +267,8 @@ p.category
 	color: #666666;
 	margin: 15px 0px 0px 0px;
 	text-align: justify;
-
 }
+
 p.summary {
 	font-size: 1em;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -277,7 +276,6 @@ p.summary {
 	color: #2b2b2b;
 	margin: 6px 0px 0px 0px;
 	line-height: 1.3em;
-	text-align: justify;
 }
 
 p.date
@@ -288,7 +286,6 @@ p.date
 	color: #666666;
 	margin: 3px 0px 0px 0px;
 	line-height: 1.3em;
-	text-align: justify;
 }
 
 .feeds {
