--- a/app/views/pages/feeds.html.erb
+++ b/app/views/pages/feeds.html.erb
@@ -42,7 +42,21 @@
                     <p class="category">PROJECTS<h4>
                     <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
                     <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                </article> 
+                                <article class="feeds" property="schema:description">
+                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
+                    <p class="author">Author: Michael Roberts</h3>
+                    <p class="category">PROJECTS<h4>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
                 </article>    
+                <article class="feeds" property="schema:description">
+                    <h2>Open Contracting Data Standard Draft Released for Comment</h2>
+                    <p class="author">Author: Michael Roberts</h3>
+                    <p class="category">PROJECTS<h4>
+                    <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
+                    <p class="date">Thu, 26 Jun 2014 17:57:45</p>
+                </article>      
         
     <footer class="inner-shadow clear">
             <section class="center-box out-shadow">
