--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,13 +8,11 @@
   </head>
   <body>
     <header>
-      <nav class="header-menu">
         <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
-      </nav>
+            <nav>
+            </nav>
     </header>
-
-    <article resource="#about-od4d" typeof="schema:Article">
-      <header>
+    <Section class="main" resource="#about-od4d" typeof="schema:Article">
         <h1 property="schema:title">About the Project</h1>
         <meta property="schema:datePublished" content="2014-06-20"/>
         <meta property="schema:wordCount" content="503"/>
@@ -23,8 +21,6 @@
         <meta property="schema:headline" content="About Open Data 4 Development"/>
         <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
         <meta property="schema:keywords" content="about;od4d"/>
-      </header>
-
       <section id="Video">
         <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
           <meta property="schema:name" content="Open Government Data and OD4D "/>
@@ -101,14 +97,14 @@
           </span>
         </p>
       </section>
-    </article>
+    </section>
 
     <footer class="inner-shadow">
       <section>
         <section class="center-box out-shadow">
           <p style="float: left;">
             <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> &nbsp; | &nbsp;
-            <a href="http://www.od4d.org/contact-us/">Contact us</a>
+            <a href="mailto:od4d@nic.br">Contact us</a>
           </p>
           <p style="float: right; color:#b5b5b5; font-size: 16px;">
             © 2014 Open Data for Development - All Rights Reserved.
