--- a/app/views/pages/feeds.html.erb
+++ b/app/views/pages/feeds.html.erb
@@ -7,14 +7,13 @@
       <title>Open Data for Development - Feeds</title>
     </head>
     <body>
-    <header>
-      <nav class="header-menu">
-        <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
-      </nav>
-    </header>
-        <article>
+        <header>
+            <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
+            <nav>
+            </nav>
+        </header>
+        <section class="main">
             <h1 property="schema:title">Partners Feeds Page Title Goes Here</h1>
-        </article>    
                 <article class="feeds" property="schema:description">
                     <h2>Open Contracting Data Standard Draft Released for Comment</h2>
                     <p class="author">Author: Michael Roberts</h3>
@@ -43,7 +42,7 @@
                     <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
                     <p class="date">Thu, 26 Jun 2014 17:57:45</p>
                 </article> 
-                                <article class="feeds" property="schema:description">
+                <article class="feeds" property="schema:description">
                     <h2>Open Contracting Data Standard Draft Released for Comment</h2>
                     <p class="author">Author: Michael Roberts</h3>
                     <p class="category">PROJECTS<h4>
@@ -56,9 +55,10 @@
                     <p class="category">PROJECTS<h4>
                     <p class="summary">The World Wide Web Foundation is pleased to announce the <a href="http://ocds.open-contracting.org/standard/"><b>first release of the Open Contracting Data Standard (OCDS)</b></a>, which aims to enhance and promote disclosure and participation in public contracting, for broad consultation. In this release, we present &#8230;</p>
                     <p class="date">Thu, 26 Jun 2014 17:57:45</p>
-                </article>      
-        
-    <footer class="inner-shadow clear">
+                </article>
+        </section>      
+
+        <footer class="inner-shadow clear">
             <section class="center-box out-shadow">
                 <p style="float: left;">
                 <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> &nbsp; | &nbsp;
@@ -68,6 +68,6 @@
                  © 2014 Open Data for Development - All Rights Reserved.   
                 </p>
             </section>
-    </footer>
+        </footer>
     </body>
     </html>
