--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-        <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
-            <nav>
-            </nav>
+        <nav>
+          <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
+        </nav>
     </header>
     <Section class="main" resource="#about-od4d" typeof="schema:Article">
         <h1 property="schema:title">About the Project</h1>
@@ -25,11 +25,10 @@
         <p resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
           <meta property="schema:name" content="Open Government Data and OD4D "/>
           <div class="video-container">
-            <iframe property="schema:embedUrl" src="//www.youtube.com/embed/ndiVbSQe5Aw"> </iframe>
+            <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
           </div>
         </p>
       </section>
-
       <section property="schema:description">
         <section id="Introduction">
           <h2>Introduction</h2>
@@ -103,9 +102,8 @@
       <section>
         <section class="center-box out-shadow">
           <p style="float: left;">
-            <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> &nbsp; | &nbsp;
-            <a href="mailto:od4d@nic.br">Contact us</a>
-          </p>
+            <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a>
+           </p>
           <p style="float: right; color:#b5b5b5; font-size: 16px;">
             © 2014 Open Data for Development - All Rights Reserved.
           </p>
