--- a/app/views/pages/feeds.html.erb
+++ b/app/views/pages/feeds.html.erb
@@ -8,11 +8,11 @@
     </head>
     <body>
         <header>
-            <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
             <nav>
+              <%= image_tag("logo-od4d.png", :alt => "Logo OD4D") %>
             </nav>
         </header>
-        <section class="main">
+        <section class="main"><br>
             <h1 property="schema:title">Partners Feeds Page Title Goes Here</h1>
                 <article class="feeds" property="schema:description">
                     <h2>Open Contracting Data Standard Draft Released for Comment</h2>
@@ -57,16 +57,15 @@
                     <p class="date">Thu, 26 Jun 2014 17:57:45</p>
                 </article>
         </section>      
-
         <footer class="inner-shadow clear">
             <section class="center-box out-shadow">
-                <p style="float: left;">
-                <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> &nbsp; | &nbsp;
-                <a href="http://www.od4d.org/contact-us/">Contact us</a>
+                <nav><p style="float: left;">
+                <a href="http://www.od4d.org/terms-and-conditions/">Terms and conditions</a> 
                 </p>
                 <p style="float: right; color:#b5b5b5; font-size: 16px;">
                  © 2014 Open Data for Development - All Rights Reserved.   
                 </p>
+                <nav>
             </section>
         </footer>
     </body>
